--- a/client/src/components/rms/Client/Addclient.scss
+++ b/client/src/components/rms/Client/Addclient.scss
@@ -169,15 +169,15 @@ form{
     background-color: white;
     //border:1px solid blue;
 }
-::-webkit-scrollbar{
-    width: 3px;
-}
-::-webkit-scrollbar-thumb{
-    border-radius: 10px;
-    background-color:rgb(7, 78, 170);
-}
-::-webkit-scrollbar-button {
-    height: 20px;
-  }
+// ::-webkit-scrollbar{
+//     width: 3px;
+// }
+// ::-webkit-scrollbar-thumb{
+//     border-radius: 10px;
+//     background-color:rgb(7, 78, 170);
+// }
+// ::-webkit-scrollbar-button {
+//     height: 20px;
+//   }
   
 }
