--- a/client/src/components/rms/Project_profile/Project_add.scss
+++ b/client/src/components/rms/Project_profile/Project_add.scss
@@ -129,6 +129,10 @@
                               margin: 4% 0 0 8%;
                               cursor: pointer;
                       }
+                      .add_project_radio_text{
+                          font-size: 16px;
+                          font-weight: 400;
+                      }
                   }
         }
 
@@ -152,8 +156,12 @@
                 input[type=radio]{
                     margin: 2% 0 0 3%;
                     cursor: pointer;
+                }
             }
-            }
+            .add_project_radio_text{
+                font-size: 16px;
+                font-weight: 400;
+            }   
         }
         
     }
@@ -227,14 +235,15 @@ i{
     background: none;
 }
 
-::-webkit-scrollbar{
-    width: 3px;
-}
-::-webkit-scrollbar-thumb{
-    border-radius: 10px;
-    background-color:rgb(7, 78, 170);
-}
-::-webkit-scrollbar-button {
-    height: 30px;
-  }
+// ::-webkit-scrollbar{
+//     width: 3px;
+//     height: 2px;
+// }
+// ::-webkit-scrollbar-thumb{
+//     border-radius: 10px;
+//     background-color:rgb(7, 78, 170);
+// }
+// ::-webkit-scrollbar-button {
+//     height: 30px;
+//   }
 }
